Fixed problems with polaroid on mobile

--- a/assets/css/_normalize.scss
+++ b/assets/css/_normalize.scss
@@ -23,3 +23,7 @@ html, body {
 a:focus, a:hover {
   text-decoration: none;
 }
+
+img {
+  min-width: 100%;
+}
